--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,17 +6,15 @@
     "@cloudinary/react": "^1.11.0",
     "@cloudinary/url-gen": "^1.9.1",
     "@hapi/joi": "^17.1.1",
-    "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.11.8",
     "@mui/styled-engine-sc": "^5.11.0",
-    "@react-navigation/native": "^6.1.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/hapi__joi": "^17.1.9",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.14",
-    "@types/react-dom": "16",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "5",
     "@types/uuid": "^9.0.0",
     "axios": "^1.3.3",
@@ -28,10 +26,9 @@
     "mongoose": "^6.9.1",
     "nanoid": "^4.0.1",
     "qrcode.react": "^3.1.0",
-    "react": "16",
+    "react": "17.0.0",
     "react-burger-menu": "^3.0.9",
-    "react-dom": "16",
-    "react-query": "^3.39.3",
+    "react-dom": "17.0.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.6",
@@ -43,17 +40,19 @@
   },
   "devDependencies": {
     "@iconify/react": "^3.2.1",
+    "@tanstack/react-query": "^4.24.10",
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^16.10.2",
     "@types/qs": "^6.9.7",
-    "@types/react": "^16.14.35",
+    "@types/react": "^17.0.0",
     "@types/react-blockies": "^1.4.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-input-mask": "^3.0.1",
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.14",
+    "react-query": "^3.39.3",
     "typescript": "^4.5.4"
   },
   "scripts": {
