fix: fixed vercel deployment

--- a/packages/backend/.env
+++ b/packages/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI="mongodb+srv://user1:9gQiJv6AlEGaRjJa@cluster0.3zkqyet.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET="SECRET"
 JWT_EXPIRATION="360000"
+API_URL="https://steam-website-react-type-script.vercel.app/"
