--- a/packages/backend/vercel.json
+++ b/packages/backend/vercel.json
@@ -1,15 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "src/server.ts",
-      "use": "@now/node"
-    }
+    { "src": "*.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/server.ts"
-    }
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
