--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,10 +16,14 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/express-serve-static-core": "^4.17.20",
     "@types/jest": "^29.4.0",
+    "@types/mongoose": "^5.3.27",
+    "@types/node": "^18.14.3",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "bson": "^5.0.1",
     "config": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -40,16 +44,14 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/config": "0.0.34",
-    "@types/express": "^4.16.1",
+    "@types/express": "^4.17.2",
     "@types/gravatar": "^1.8.0",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/mongoose": "^5.5.0",
-    "@types/node": "^18.7.8",
     "concurrently": "^4.1.0",
     "jest": "^29.4.1",
     "nodemon": "^1.19.0",
     "supertest": "^6.3.3",
     "tslint": "^6.1.3",
-    "typescript": "^3.4.5"
+    "typescript": "^4.1.2"
   }
 }
