--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "skipLibCheck": true,
     "typeRoots": [
       "@types/node",
       "./src/types"
