--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
     "data.js": "^0.12.11",
+    "eslint-plugin-import": "^2.27.5",
     "formik": "^2.2.9",
     "joi": "^17.7.1",
     "joi-browser": "^13.4.0",
