--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -30,9 +30,11 @@
     "react": "17.0.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "17.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "styled-components": "^4.4.1",
+    "swiper": "^9.1.0",
     "typeface-inter": "^3.18.1",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.2",
