--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "5",
+    "@types/react-transition-group": "^4.4.5",
     "@types/uuid": "^9.0.0",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
@@ -33,6 +34,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^4.4.1",
     "swiper": "^9.1.0",
     "typeface-inter": "^3.18.1",
