--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,9 +28,7 @@
     "mongoose": "^6.9.1",
     "nanoid": "^4.0.1",
     "qrcode.react": "^3.1.0",
-    "react": "17.0.0",
     "react-burger-menu": "^3.0.9",
-    "react-dom": "17.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
@@ -59,6 +57,10 @@
     "@types/styled-components": "^4.0.3",
     "react-query": "^3.39.3",
     "typescript": "^4.5.4"
+  },
+  "peerDependencies": {
+    "react": "17.0.0",
+    "react-dom": "17.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
