--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,11 +18,13 @@
     "@types/react-router-dom": "5",
     "@types/react-transition-group": "^4.4.5",
     "@types/uuid": "^9.0.0",
-    "axios": "^1.3.3",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "cors-anywhere": "^0.4.4",
     "data.js": "^0.12.11",
     "eslint-plugin-import": "^2.27.5",
     "formik": "^2.2.9",
+    "http-proxy-middleware": "^2.0.6",
     "joi": "^17.7.1",
     "joi-browser": "^13.4.0",
     "mongoose": "^6.9.1",
