--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -19,7 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["node", "vite/client"]
+    "types": ["vite/client"]
   },
   "include": [
     "src"
