--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -60,7 +60,8 @@
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^4.0.3",
     "react-query": "^3.39.3",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vite": "^4.1.0"
   },
   "peerDependencies": {
     "react": "17.0.0",
