--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,12 +1,12 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage": "https://yungdena.github.io/Steam-Website-React-TypeScript",
   "private": true,
   "dependencies": {
     "@cloudinary/react": "^1.11.0",
     "@cloudinary/url-gen": "^1.9.1",
     "@hapi/joi": "^17.1.1",
-    "@mui/styled-engine-sc": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -56,6 +56,7 @@
     "@types/react-modal": "^3.12.1",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^4.0.3",
+    "gh-pages": "^6.0.0",
     "react-query": "^3.39.3",
     "typescript": "^4.5.4",
     "vite": "^4.1.0"
@@ -68,7 +69,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
