--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://yungdena.github.io/Steam-Website-React-TypeScript",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@cloudinary/react": "^1.11.0",
     "@cloudinary/url-gen": "^1.9.1",
     "@hapi/joi": "^17.1.1",
