--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,6 +20,7 @@
     "@types/express-serve-static-core": "^4.17.20",
     "@types/jest": "^29.4.0",
     "@types/mongoose": "^5.3.27",
+    "@types/multer": "^1.4.9",
     "@types/node": "^18.14.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
@@ -40,6 +41,7 @@
     "jsonwebtoken": "^8.5.1",
     "lightrun": "^1.9.1",
     "mongoose": "^5.5.7",
+    "multer": "^1.4.5-lts.1",
     "request": "^2.88.0"
   },
   "devDependencies": {
