--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
+    "@types/express-fileupload": "^1.4.3",
     "@types/express-serve-static-core": "^4.17.20",
     "@types/jest": "^29.4.0",
     "@types/mongoose": "^5.3.27",
@@ -26,11 +27,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "bson": "^5.0.1",
+    "cloudinary": "^1.41.0",
+    "cloudinary-core": "2.11.2",
     "config": "^3.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "express-fileupload": "^1.4.1",
     "express-graphql": "^0.12.0",
     "express-validator": "^5.3.1",
     "graphql": "^15.5.1",
