--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,13 +4,12 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@cloudinary/react": "^1.11.0",
-    "@cloudinary/url-gen": "^1.9.1",
     "@hapi/joi": "^17.1.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/hapi__joi": "^17.1.9",
+    "@types/node": "^20.8.9",
     "@types/react": "^17.0.0",
     "@types/react-router-dom": "5",
     "@types/react-transition-group": "^4.4.5",
