implemented creating / visiting community posts

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -34,7 +34,9 @@
     "nanoid": "^4.0.1",
     "qrcode.react": "^3.1.0",
     "react-burger-menu": "^3.0.9",
+    "react-focus-on": "^3.9.1",
     "react-query": "^3.39.3",
+    "react-remove-scroll": "^2.5.7",
     "react-router-dom": "5",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.5",
