--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/hapi__joi": "^17.1.9",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.0",
     "@types/react": "^17.0.0",
     "@types/react-router-dom": "5",
@@ -30,6 +31,7 @@
     "http-proxy-middleware": "^2.0.6",
     "joi": "^17.7.1",
     "joi-browser": "^13.4.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.1",
     "nanoid": "^4.0.1",
     "qrcode.react": "^3.1.0",
